cambios en el forms

--- a/SistemaBancarioVersion1.2/CapaDatos.csproj
+++ b/SistemaBancarioVersion1.2/CapaDatos.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+	  <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>SistemaBancarioVersion1._2</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="ReaLTaiizor" Version="3.8.1.3" />
   </ItemGroup>
 
 </Project>
